# PF_MAB

./: .gitignore  PF-UCB.ipynb  README.md  bandits.py  bandits_improved.py  client.py  client_improved.py  means.npy  movielens_norm_10_40.npy  pyproject.toml  server.py  server_improved.py
scores/: scores.txt
scores_improved/: scores_improved.txt
scores_movielens/: scores_movielens.txt
