[tool.poetry]
name = "pf_mab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
tqdm = "==4.62.3"
matplotlib = "==3.5.1"
numpy = "==1.21.5"

[tool.poetry.dev-dependencies]
jupyterlab = "==3.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
